# ldog

./: .gitattributes  .gitignore  BUILD.bazel  CMakeLists.txt  CMakePresets.json  README.md  client.json  config.json  main.cc
app/: main.cc  service_test.cc
configs/: client.json  server.json
inc/: ConsoleSinkImpl.h  FileSinkImpl.h  Formatter.h  ILogSink.h  LogDog.h  LogManager.h  LogMessage.h  log_types.h
inc/formatters/: IFormatter.h
inc/policy/: CpuPolicy.h  GpuPolicy.h  RamPolicy.h
inc/protection/: RingBuffer.h  SafeFile.h  SafeSocket.h  ThreadPool.h
inc/sinks/: ConsoleSinkImpl.h  FileSinkImpl.h  ILogSink.h
inc/tel_src/: FileTelemetrySourceImpl.h  ITelemetrySource.h  SocketTelemetrySourceImpl.h  SomeIPTelemetrySourceImpl.h
notes/: phase.md
src/: ConsoleSinkImpl.cc  FileSinkImpl.cc  Formatter.cc  LogDog.cc  LogManager.cc  LogMessage.cc
src/protection/: SafeFile.cc  SafeSocket.cc
src/sinks/: ConsoleSinkImpl.cc  FileSinkImpl.cc
src/tel_src/: FileTelemetrySourceImpl.cc  SocketTelemetrySourceImpl.cc  SomeIPTelemetrySourceImpl.cc
tests/: log_manager_tests.cc  message_extended_tests.cc  msg_tests.cc  sink_tests.cc
toolchains/: arm-rpi-toolchain.cmake
tools/: shell_log_src.sh
