cc_library(
    name = "ldog_lib",
    srcs = glob([
        "src/**/*.cc",
    ]),
    hdrs = glob([
        "inc/**/*.h",
        "inc/**/*.hpp",
    ]),
    includes = ["inc"],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "app",
    srcs = ["app/main.cc"],
    deps = [":ldog_lib"],
)
